v0.3.11:
    - Changed default !pipe_entrance_freeze setting to 1 to avoid inconsistencies.
    - Fixed earthquake effect (e.g. Thwomps) still going while the Retry prompt is shown (only when using !prompt_freeze = 2).

v0.3.10:
    - Fixed issue where dying in a level with a "No Yoshi" entrance would respawn you in the bonus game.

v0.3.9:
    - Added fix (optional, enabled by default) for the weird vanilla behavior where levels 12E-13B are always forced to use the "No Yoshi Sign 2" intro regardless of their tileset (which can also mess up custom "No Yoshi Intro" patches).
    - Fixed !exit_animation = 0 or 1 behaving seemingly randomly, sometimes exiting immediately, sometimes after the prompt closed - now it will always exit after the prompt is closed (thanks to SJandCharlieTheCat for reporting this).
    - Fixed death animation with !exit_animation = 2 having incosistent timing when using different !prompt_freeze settings.
    - Fixed vanilla "high and low" tides timer not resetting when respawning, which would cause inconsistent tide behavior between retries.
    - Fixed vanilla layer 3 tides not stopping scrolling left when the Retry prompt is shown (only when using !prompt_freeze = 2).
    - Fixed Shell-less Koopas being able to move (fall) while the Retry prompt is shown (only when using !prompt_freeze = 2).

v0.3.8:
    - Made possible to use tiles in SP3/SP4 for the Retry prompt (just add $100 to the tile numbers in the settings).
    - Fixed camera position sometimes being inconsistent between loading a level normally and reloading it with Retry (thanks to schema_tuna for reporting and fixing this).
    - Optimized ram.asm (cleaner, faster compilation time).

v0.3.7:
    - Fixed collected invisible 1-UPs not resetting on death, which would allow to skip some of them after respawning (when not collecting them all).
    - Fixed scroll sprites speeds not resetting on death (thanks to LouisDoucet for reporting this).